@@ -1,12 +1,19 @@
 #include <stic.h>
 
+#include <sys/stat.h> /* stat */
+#include <unistd.h> /* stat() */
+
 #include <stdio.h> /* fclose() fopen() fprintf() remove() */
 
 #include "../../src/cfg/config.h"
 #include "../../src/cfg/info.h"
 #include "../../src/cfg/info_chars.h"
 #include "../../src/ui/ui.h"
+#include "../../src/utils/matcher.h"
 #include "../../src/utils/str.h"
+#include "../../src/cmd_core.h"
+#include "../../src/filetype.h"
+#include "../../src/opt_handlers.h"
 
 #include "utils.h"
 
@@ -31,7 +38,37 @@ TEST(view_sorting_is_read_from_vifminfo)
 
 	opt_handlers_teardown();
 
-	assert_success(remove("vifminfo"));
+	assert_success(remove(SANDBOX_PATH "/vifminfo"));
+}
+
+TEST(filetypes_are_deduplicated)
+{
+	struct stat first, second;
+	char *error;
+	matcher_t *m;
+
+	copy_str(cfg.config_dir, sizeof(cfg.config_dir), SANDBOX_PATH);
+	cfg.vifm_info = VIFMINFO_FILETYPES;
+	init_commands();
+
+	/* Add a filetype. */
+	m = matcher_alloc("*.c", 0, 1, &error);
+	assert_non_null(m);
+	ft_set_programs(m, "{Description}command", 0, 1);
+
+	/* Write it first time. */
+	write_info_file();
+	/* And remember size of the file. */
+	assert_success(stat(SANDBOX_PATH "/vifminfo", &first));
+
+	/* Update vifminfo second time. */
+	write_info_file();
+	/* Check that size hasn't changed. */
+	assert_success(stat(SANDBOX_PATH "/vifminfo", &second));
+	assert_true(first.st_size == second.st_size);
+
+	assert_success(remove(SANDBOX_PATH "/vifminfo"));
+	reset_cmds();
 }
 
 /* vim: set tabstop=2 softtabstop=2 shiftwidth=2 noexpandtab cinoptions-=(0 : */
