@@ -27,6 +27,8 @@
 
 	Fixed polluting screen of server with messages about invalid arguments.
 
+	Fixed duplicated filetype entries in vifminfo.  Thanks to aleksejrs.
+
 0.8.1-beta to 0.8.1
 
 	Added summary to builtin tree implementation.  Thanks to aleksejrs.
